# maubot-characterai

./: LICENCE  README.md  base-config.yaml  cai.py  maubot.yaml  pyproject.toml
.github/workflows/: build_plugin.yml
cai/: __init__.py  cai.py  caimessage.py  utils.py
