[tool.poetry]
name = "maubot-characterai"
version = "0.0.1"
description = ""
authors = ["Matthieu LAURENT <matthieu.laurent69@proton.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
characterai = "^0.8.0"
maubot = "^0.4.2"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
